--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 include_directories(/usr/local/include)
 link_directories(/usr/local/lib)
 include_directories(/home/caesar/ClionProjects/caesarlinsa/include)
-set(SOURCE_FILES main.c ArrayList.c util.c)
+set(SOURCE_FILES main.c ArrayList.c req_curl.c file_operate.c tag_operate.c)
 add_executable(caesarlinsa ${SOURCE_FILES})
-target_link_libraries(caesarlinsa gumbo)
+target_link_libraries(caesarlinsa gumbo cjson curl)
